# nix-darwin

./: .gitignore  .sops.yaml  AGENTS.md  CLAUDE.md  README.md  apply  flake.nix  home.nix  personal.nix  readme.md  secrets.example.yaml  secrets.yaml  setup.sh
docs/: agent-environment-alignment.md  consolidation-plan.md  nix-agent-tooling-runbook.md
lib/: expand-template.nix  expand-templates-dir.nix
modules/: base.nix  claude-code.nix  shared-scripts.nix
prompt/: antigravity.md  architectual-decision.md  claude-chat.md  claude-code.md  context-compression.md  engineering.md  gemini-chat.md  local-installation.md  nixos-webapp-deployment-guide.md  scrapbox.md  sktc-deploy.md  unix-principal.md
prompt/claude-code/: claude.md
prompt/claude-code/skills/: functional-swift.skill
prompt/claude-code/skills/apple-reminders-geofence/: SKILL.md
prompt/claude-code/skills/ask-network/: SKILL.md
prompt/claude-code/skills/ble-debug/: SKILL.md
prompt/claude-code/skills/codex-review/: SKILL.md
prompt/claude-code/skills/collect-and-reply/: SKILL.md
prompt/claude-code/skills/colmena/: SKILL.md  manual.md
prompt/claude-code/skills/declarative-web-deployment/: SKILL.md
prompt/claude-code/skills/design-format-ir-slides/: SKILL.md
prompt/claude-code/skills/design-format-partnership/: SKILL.md
prompt/claude-code/skills/design-format-service-def/: SKILL.md
prompt/claude-code/skills/design-format-web/: SKILL.md
prompt/claude-code/skills/design-format-whitepaper/: SKILL.md
prompt/claude-code/skills/elm/: core_language.md  index.md  next_steps.md
prompt/claude-code/skills/freee-api-skill/: SKILL.md
prompt/claude-code/skills/functional-swift/: SKILL.md
prompt/claude-code/skills/gdrive/: SKILL.md
prompt/claude-code/skills/haskell/: SKILL.md  five-point-haskell.md  get-programming-with-haskell.md  gg-h.md  multi-core-haskell.md  parallel-concurrent-haskell.md  real-world-haskell.md
prompt/claude-code/skills/haskell-flake/: SKILL.md
prompt/claude-code/skills/haskell-swift/: SKILL.md
prompt/claude-code/skills/hfmpse/: SKILL.md
prompt/claude-code/skills/hls/: SKILL.md
prompt/claude-code/skills/ios-background-ble/: SKILL.md
prompt/claude-code/skills/kabeuchi-coach/: SKILL.md
prompt/claude-code/skills/lp-hero-video/: SKILL.md
prompt/claude-code/skills/m36/: SKILL.md  cartographer_integration.md
prompt/claude-code/skills/natural-writing/: SKILL.md
prompt/claude-code/skills/nix/: SKILL.md
prompt/claude-code/skills/omi-protocol/: SKILL.md
prompt/claude-code/skills/plural-reality-design-system/: SKILL.md
prompt/claude-code/skills/polysemy/: SKILL.md  polysemy-1.9.2.0.md
prompt/codex/: agent.md
scripts/: cat-all.py  claude-history.sh  download-slack-channel-files.py  flatten-dir.py  freee-call.ts  gemini-rag.ts  git-prompt.sh  lines2tar.hs  markthesedown.py  md-filter.py  nix-darwin-scripts.cabal  scrapbox-write.mjs  split-video.hs  split-video.ts  statusline-command.sh  tar-map.hs  url2content.hs  urls-under.py  urls2contents.hs  urls2contents.py
templates/: apply  flake.nix.template  gitignore  secrets.yaml.template  sops.yaml.template
(+321 files in other folders)
