name:                nix-darwin-scripts
version:             0.1.0.0
synopsis:            Haskell scripts for nix-darwin configuration
description:         Collection of standalone Haskell scripts used in nix-darwin
license:             MIT
author:              Yui Nishimura
maintainer:          nisshi.yui79@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable urls2contents
  main-is:             urls2contents.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.14 && <5
                     , protolude
                     , text
                     , req
                     , modern-uri
                     , scalpel
                     , optparse-applicative
                     , safe-exceptions
                     , process
                     , tar
                     , directory
                     , filepath
  -- hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall
