name:                nix-darwin-scripts
version:             0.1.0.0
synopsis:            Haskell scripts for nix-darwin configuration
description:         Collection of standalone Haskell scripts used in nix-darwin
license:             MIT
author:              Yui Nishimura
maintainer:          nisshi.yui79@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable url2content
  main-is:             url2content.hs
  build-depends:       base >=4.14 && <5
                     , protolude
                     , text
                     , req
                     , modern-uri
                     , safe-exceptions
                     , process
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude
  ghc-options:         -Wall

executable lines2tar
  main-is:             lines2tar.hs
  build-depends:       base >=4.14 && <5
                     , protolude
                     , text
                     , tar
                     , bytestring
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude
  ghc-options:         -Wall

executable tar-map
  main-is:             tar-map.hs
  build-depends:       base >=4.14 && <5
                     , protolude
                     , text
                     , tar
                     , bytestring
                     , process
                     , directory
                     , filepath
                     , optparse-applicative
                     , safe-exceptions
                     , time
                     , async
                     , stm
  default-language:    Haskell2010
  default-extensions:  LambdaCase
                     , OverloadedStrings
                     , RecordWildCards
                     , ScopedTypeVariables
                     , NoImplicitPrelude
  ghc-options:         -Wall
